force-app/main/default/objects/Student_Detail__c/Student_Detail__c.object-meta.xml
<CustomObject>
    <label>Student Detail</label>
    <nameField>
        <label>St Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>