force-app/main/default/objects/Student_Detail__c/fields/Alternate_Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone_no__c</fullName>
    <label>Alternate Phone no.</label>
    <type>Phone</type>
</CustomField>