force-app/main/default/objects/Student_Detail__c/fields/Handicap__c.field-meta.xml
<CustomField>
    <fullName>Handicap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handicap</label>
    <type>Checkbox</type>
</CustomField>