force-app/main/default/objects/Student_Detail__c/fields/Personal_Phone_no__c.field-meta.xml
<CustomField>
    <fullName>Personal_Phone_no__c</fullName>
    <label>Personal Phone no.</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>