force-app/main/default/objects/Student_Detail__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <formula>now()+ (0.00069)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>time</label>
    <type>DateTime</type>
</CustomField>