force-app/main/default/objects/Student_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Handicap__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Mental</fullName>
            </value>
            <value>
                <fullName>Other Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>