force-app/main/default/objects/Student_Detail__c/recordTypes/Record_type1.recordType-meta.xml
<RecordType>
    <fullName>Record_type1</fullName>
    <active>true</active>
    <description>groups by location</description>
    <label>Record type1</label>
</RecordType>