force-app/main/default/objects/Student_Detail__c/recordTypes/Record_type2.recordType-meta.xml
<RecordType>
    <fullName>Record_type2</fullName>
    <active>true</active>
    <description>groups by location out of india</description>
    <label>Record type2</label>
</RecordType>